WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206921
Null deref under -[WebFrame isTelephoneNumberParsingAllowed]
https://bugs.webkit.org/show_bug.cgi?id=206921
Summary
Null deref under -[WebFrame isTelephoneNumberParsingAllowed]
Tim Horton
Reported
2020-01-29 00:37:22 PST
Null deref under -[WebFrame isTelephoneNumberParsingAllowed]
Attachments
Patch
(2.08 KB, patch)
2020-01-29 00:39 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-01-29 00:39:21 PST
Created
attachment 389110
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2020-01-29 00:39:44 PST
<
rdar://problem/58984110
>
WebKit Commit Bot
Comment 3
2020-01-29 11:36:33 PST
Comment on
attachment 389110
[details]
Patch Clearing flags on attachment: 389110 Committed
r255372
: <
https://trac.webkit.org/changeset/255372
>
WebKit Commit Bot
Comment 4
2020-01-29 11:36:34 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug