Null deref under -[WebFrame isTelephoneNumberParsingAllowed] https://bugs.webkit.org/show_bug.cgi?id=206921

Reviewed by Anders Carlsson.

* WebView/WebFrame.mm:
(-[WebFrame isTelephoneNumberParsingAllowed]):
(-[WebFrame isTelephoneNumberParsingEnabled]):
DataDetectors can hold on to a WebFrame on an operation queue before
calling into these methods. In the meantime, it is possible for the
WebView to be closed, resulting in a null core Frame.
This is not reproducible in a test app, but a speculative fix seems fine.


Canonical link: https://commits.webkit.org/219966@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255372 268f45cc-cd09-0410-ab3c-d52691b4dbfc